--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="logo">
-        <img src="assets\spectrum-icon.png" alt="Spectrum Logo" class="logo" />
+        <img src="https://github.com/Bindu32/blog-system/blob/main/frontend/assets/spectrum-icon.png?raw=true" alt="Spectrum Logo" class="logo" />
       <h1><span class="gradient">SPECTRUM</span> <span class="light">BLOG</span></h1>
     </div>
     <h2>Login</h2>
