--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 
-  <header>
-    <div class="logo">🌈 Spectrum Blog</div>
+  <header class="nav-bar">
+    <div class="logo">
+      <img src = "https://github.com/Bindu32/blog-system/blob/main/frontend/assets/spectrum-icon.png?raw=true" style="width: 30px; height: 30px"/> 
+      <span class ="gradients">SPECTRUM</span> <span class="lights">BLOG</span>
+    </div>
     <nav>
       <a href="#">Home</a>
       <a href="#" id="register-link">Register</a>
@@ -22,22 +25,22 @@
     <h1>Top Blog Posts</h1>
     <div class="blog-posts">
       <div class="card" data-category="Technology">
-        <img src="https://img.icons8.com/ios-filled/100/play-button-circled.png"/>
+        <img src="https://i.pinimg.com/736x/90/9d/f1/909df1df664fb611e390f9b6aa3c55fd.jpg" style="width: 100%; height: auto;"/>
         <h3>Breaking New Innovations in AI</h3>
         <p>58 Comments</p>
       </div>
       <div class="card" data-category="Lifestyle">
-        <img src="https://img.icons8.com/ios-filled/100/night.png"/>
+        <img src="https://i.pinimg.com/736x/61/89/45/618945432aa216172dfaf53c666c53d9.jpg" style="width: 100%; height: auto;"/>
         <h3>Nighttime Rituals for Restful Sleep</h3>
         <p>24 Comments</p>
       </div>
       <div class="card" data-category="Travel">
-        <img src="https://img.icons8.com/ios-filled/100/luggage.png"/>
+        <img src="https://i.pinimg.com/736x/46/46/85/4646858076b1e7f4be0b56569dce64a2.jpg" style="width: 100%; height: auto;"/>
         <h3>Exploring the Alpine Landscapes</h3>
         <p>38 Comments</p>
       </div>
       <div class="card" data-category="Health">
-        <img src="https://img.icons8.com/ios-filled/100/like--v1.png"/>
+        <img src="https://i.pinimg.com/736x/42/f6/6f/42f66f2c74b77da0a58bb5921e45b3a5.jpg" style="width: 100%; height: auto;"/>
         <h3>The Benefits of Daily Meditation</h3>
         <p>12 Comments</p>
       </div>
@@ -47,19 +50,19 @@
     <h2>Discover Our Blogs</h2>
     <div class="categories">
       <div class="cat">
-        <img src="https://img.icons8.com/ios-filled/50/circuit.png"/>
+        <img src="https://static.vecteezy.com/system/resources/previews/002/061/739/non_2x/share-icon-linear-style-eps-vector.jpg"/>
         <span>Technology</span>
       </div>
       <div class="cat">
-        <img src="https://img.icons8.com/ios-filled/50/candle.png"/>
+        <img src="https://i.pinimg.com/736x/c8/a7/cb/c8a7cb821fa466de511d6e4340f16b6f.jpg"/>
         <span>Lifestyle</span>
       </div>
       <div class="cat">
-        <img src="https://img.icons8.com/ios-filled/50/airplane.png"/>
+        <img src="https://i.pinimg.com/736x/51/b8/30/51b83051f84a83c044913dc9cd12d9b2.jpg"/>
         <span>Travel</span>
       </div>
       <div class="cat">
-        <img src="https://img.icons8.com/ios-filled/50/heart-with-pulse.png"/>
+        <img src="https://images.sftcdn.net/images/t_app-icon-m/p/47b8e803-9af3-43e5-a921-d72de58e2c46/1744645286/like-plus-for-insta-follower-logo"/>
         <span>Health</span>
       </div>
     </div>
@@ -76,7 +79,7 @@
         <button id="read-more-btn">Read More</button>
       </div>
       <div class="img">
-        <img src="https://img.icons8.com/external-flat-icons-inmotus-design/100/external-blog-graphic-design-flat-icons-inmotus-design.png"/>
+        <img src="https://cdn.rcd.gg/PreMiD.png" style =" width : 70%;  height : auto;" />
       </div>
     </section>
 
@@ -84,17 +87,17 @@
       <h2>Why Choose Spectrum Blog?</h2>
       <div class="features">
         <div class="feature">
-          <img src="https://img.icons8.com/ios-filled/50/idea.png" alt="Creative Content Icon" />
+          <img src="https://i.pinimg.com/736x/4d/aa/81/4daa815ca86fb19e4dc45e52da36deed.jpg" alt="Creative Content Icon" />
           <h3>Creative Content</h3>
           <p>We deliver unique and engaging content tailored to your interests.</p>
         </div>
         <div class="feature">
-          <img src="https://img.icons8.com/ios-filled/50/clock.png" alt="Timely Updates Icon" />
+          <img src="https://i.pinimg.com/736x/7f/9c/f6/7f9cf676c241c5460481de070e821e56.jpg" alt="Timely Updates Icon" />
           <h3>Timely Updates</h3>
           <p>Stay informed with the latest trends and updates in various fields.</p>
         </div>
         <div class="feature">
-          <img src="https://img.icons8.com/ios-filled/50/globe.png" alt="Community Icon" />
+          <img src="https://i.pinimg.com/736x/7f/0b/69/7f0b695c86494333a28c87e68cb75756.jpg" alt="Community Icon" />
           <h3>Global Community</h3>
           <p>Join a vibrant community of readers and contributors from around the world.</p>
         </div>
@@ -103,8 +106,50 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-      <h3>Help Center</h3>
-      <p>Search for assistance</p>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>Help Center</h3>
+          <p>Need assistance? We're here to help.</p>
+          <a href="#">Contact Support</a>
+        </div>
+        <div class="footer-section">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about-spectrum">About Us</a></li>
+            <li><a href="#">Register</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Connect with Us</h3>
+          <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank">
+              <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook" />
+              Facebook
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+              <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" />
+              Instagram
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+              <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" />
+              Twitter
+            </a>
+            <a href="https://www.linkedin.com" target="_blank">
+              <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
+              LinkedIn
+            </a>
+            <a href="https://www.youtube.com" target="_blank">
+              <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube" />
+              YouTube
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Spectrum Blog. All rights reserved.</p>
+      </div>
     </footer>
   </div>
 
