--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Spectrum Blog</title>
-  <link rel="stylesheet" href="style.css"/>  
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -14,13 +14,13 @@
       <span class="gradients">SPECTRUM</span> <span class="lights">BLOG</span>
     </div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#" id="register-link">Register</a>
-      <a href="#about-spectrum">About Spectrum</a>
+      <a href="index.html">Home</a>
+      <a href="register.html" id="register-link">Register</a>
+      <a href="settings.html">Settings</a>
+      <a href="about.html">About</a>
       <button id="mode-toggle" style="margin-left: 15px; padding: 5px 10px;">🌙</button>
     </nav>
   </header>
-  
 
   <div class="container">
     <!-- Top Blog Posts Section -->
@@ -113,9 +113,9 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about-spectrum">About Us</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="register.html">Register</a></li>
             <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
