--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -10,6 +10,7 @@
   <header>
     <h1>Spectrum Blog</h1>
     <div class="user-options">
+      <button onclick="window.location.href='settings.html'" class="settings-btn">⚙️ Settings</button>
       <button onclick="window.location.href='create-blog.html'" class="create-btn">➕ Create Blog</button>
       <button onclick="window.location.href='edit-blog.html'" class="edit-btn">✏️ Edit Blog</button>
       <button onclick="window.location.href='profile.html'" class="profile-btn">👤 Profile</button>
