--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -19,6 +19,7 @@
   </header>
 
   <main>
+    <h2>Latest Blogs</h2>
     <div id="blog-list" class="blog-container">
       <!-- Blogs will be dynamically inserted here -->
     </div>
