--- a/frontend/travel-blog.html
+++ b/frontend/travel-blog.html
@@ -20,15 +20,31 @@
   </header>
 
   <main class="container">
-    <h1>Exploring the Alpine Landscapes</h1>
+    <h1>Exploring the Airplane Landscapes</h1>
     <img src="https://i.pinimg.com/736x/46/46/85/4646858076b1e7f4be0b56569dce64a2.jpg" 
     style="width: 50%; max-width: 300px; height: auto; margin: 0 auto 10px; display: block;" 
     alt="Alpine Landscapes" />
-   <article>
-      <p>From breathtaking mountain peaks to charming villages, the Alpine region offers an unforgettable travel experience.</p>
-      <p>Discover the best hiking trails, scenic drives, and hidden gems that make the Alps a must-visit destination.</p>
-      <p>Join us on a journey through nature’s paradise.</p>
+    <article>
+      <p>
+        Gazing out of an airplane window offers a surreal and often humbling experience. At cruising altitude, the Earth below reveals its beauty in an entirely new way. From the neat patchwork of agricultural lands to the vast, untouched wilderness, every flight paints a different picture. Watching the world from above gives passengers a peaceful sense of scale and perspective.
+      </p>
+      <p>
+        The view can be particularly captivating during sunrise or sunset, when the sky turns into a canvas of colors. Mountain peaks rise through cloud blankets, rivers snake across the terrain, and cities light up like constellations at night. These moments turn ordinary travel into visual poetry and reflection.
+      </p>
+      <p>
+        Some travelers enhance their journey by using apps to identify landmarks, flight paths, and altitudes. These tools transform a passive window view into an interactive geography lesson. For many, the time spent looking out the window becomes a period of relaxation, creativity, or quiet contemplation. It’s an opportunity to disconnect from screens and immerse in the moment.
+      </p>
+      <p>
+        Whether you’re flying for business or pleasure, don’t underestimate the serenity of observing airplane landscapes. These fleeting scenes offer a reminder of nature’s grandeur and humanity’s progress. They reconnect us with a broader view of our world—literally and figuratively.
+      </p>
+      <p><a href="https://www.nationalgeographic.com/travel/article/what-to-see-from-an-airplane-window" target="_blank">Discover more sky views →</a></p>
     </article>
+    
+    <div class="reactions">
+      <button onclick="redirectToRegister()" class="reaction-btn">👍 <span id="likeCount">180</span></button>
+      <button onclick="redirectToRegister()" class="reaction-btn">👎 <span id="dislikeCount">0</span></button>
+      <button onclick="redirectToRegister()" class="reaction-btn">💬 <span id="commentCount">5</span></button>
+    </div>
   </main>
 
   <footer class="footer">
