--- a/frontend/sleep-blog.html
+++ b/frontend/sleep-blog.html
@@ -23,10 +23,26 @@
     <h1>Nighttime Rituals for Restful Sleep</h1>
     <img src="https://i.pinimg.com/736x/61/89/45/618945432aa216172dfaf53c666c53d9.jpg" style="width: 50%; max-width: 300px; height: auto; margin: 0 auto 10px; display: block;" alt="Nighttime Rituals" />
     <article>
-      <p>Getting quality sleep is crucial for our mental and physical well-being. In this post, we explore proven nighttime rituals for achieving restful sleep.</p>
-      <p>Learn how creating a calming environment, avoiding blue light exposure, and practicing mindfulness can improve sleep quality.</p>
-      <p>Let’s dive into techniques that ensure you wake up refreshed and ready to take on the day.</p>
+      <p>
+        A restful night’s sleep is vital for our physical, emotional, and mental well-being. In a world of constant digital distractions and daily stressors, establishing a bedtime routine can help our bodies and minds transition smoothly into deep rest. One of the most effective steps is to create a consistent sleep schedule. Going to bed and waking up at the same time every day helps regulate your circadian rhythm.
+      </p>
+      <p>
+        Reducing screen time an hour before bed is equally important. The blue light from phones and laptops interferes with melatonin, the hormone responsible for sleep. Instead, consider reading a physical book, practicing meditation, or listening to calming music. Many people find that journaling before bed helps release the thoughts of the day, making it easier to relax.
+      </p>
+      <p>
+        Other beneficial rituals include taking a warm shower, doing light stretching, and using essential oils like lavender or eucalyptus. These activities signal to your brain that it’s time to unwind. Creating a soothing sleep environment—dim lighting, cool temperature, and comfortable bedding—can also greatly improve your sleep quality.
+      </p>
+      <p>
+        When practiced consistently, these nighttime rituals can lead to better sleep hygiene, reduced stress, and more productive mornings. They are small yet powerful habits that promote long-term health and a peaceful state of mind.
+      </p>
+      <p><a href="https://www.sleepfoundation.org/sleep-hygiene/bedtime-routine" target="_blank">Learn more about sleep rituals →</a></p>
     </article>
+    
+    <div class="reactions">
+      <button onclick="redirectToRegister()" class="reaction-btn">👍 <span id="likeCount">178</span></button>
+      <button onclick="redirectToRegister()" class="reaction-btn">👎 <span id="dislikeCount">9</span></button>
+      <button onclick="redirectToRegister()" class="reaction-btn">💬 <span id="commentCount">15</span></button>
+    </div>
   </main>
 
   <footer class="footer">
