--- a/frontend/ai-blog.html
+++ b/frontend/ai-blog.html
@@ -23,21 +23,28 @@
   <main class="container">
     <h1>Breaking New Innovations in AI</h1>
     <img src="https://i.pinimg.com/736x/90/9d/f1/909df1df664fb611e390f9b6aa3c55fd.jpg" style="width: 50%; max-width: 300px; height: auto; margin: 0 auto 10px; display: block;" alt="AI Innovations" />
-
+      
     <article>
       <p>
-        Artificial Intelligence (AI) is rapidly transforming every industry—from healthcare and finance to entertainment and transportation.
-        With breakthroughs in deep learning, natural language processing, and robotics, the future of AI looks more exciting than ever.
+        Artificial Intelligence (AI) has rapidly evolved from a futuristic concept to a transformative force across industries. From voice assistants like Siri and Alexa to self-driving cars and predictive analytics, AI is now embedded into our daily lives. Recent innovations in deep learning, neural networks, and generative models have allowed machines to process human language, identify images, and even create realistic content with remarkable accuracy.
       </p>
       <p>
-        In this article, we explore the latest advancements in AI technology, discuss ethical considerations, and predict how AI will shape
-        the next decade. Whether you're a tech enthusiast or just curious, this post offers insights into one of the most transformative
-        innovations of our time.
+        One of the most significant breakthroughs in AI has been the development of large language models that can understand and generate human-like text. These models are capable of writing essays, generating code, and providing intelligent customer service. In healthcare, AI is being used to detect diseases like cancer earlier through pattern recognition in medical imaging, improving diagnosis and patient outcomes.
       </p>
       <p>
-        Stay tuned as we dive into the world of smart machines, predictive analytics, and the quest for artificial general intelligence!
+        The impact of AI in robotics has also been profound. Robots powered by AI are now performing complex tasks in manufacturing, logistics, and even surgery. With reinforcement learning and advanced simulation, robots can adapt and learn in real-time. Meanwhile, ethical considerations surrounding AI use—such as bias in algorithms, data privacy, and the role of human oversight—are prompting important discussions on responsible innovation.
       </p>
+      <p>
+        As we move into the future, AI is set to further revolutionize education, climate modeling, cybersecurity, and creative industries. Whether assisting researchers in scientific discovery or enhancing accessibility through speech-to-text tools, the possibilities are vast. AI is not just automating processes but augmenting human potential, paving the way for smarter societies.
+      </p>
+      <p><a href="https://www.ibm.com/artificial-intelligence/what-is-ai" target="_blank">Learn more about AI innovations →</a></p>
     </article>
+    
+    <div class="reactions">
+      <button onclick="redirectToRegister()" class="reaction-btn">👍 <span id="likeCount">195</span></button>
+      <button onclick="redirectToRegister()" class="reaction-btn">👎 <span id="dislikeCount">6</span></button>
+      <button onclick="redirectToRegister()" class="reaction-btn">💬 <span id="commentCount">16</span></button>
+    </div>
   </main>
 
   <footer class="footer">
