--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="register.html" id="register-link">Register</a>
-      <a href="settings.html">Settings</a>
+     
       <a href="about.html">About</a>
       <button id="mode-toggle" style="margin-left: 15px; padding: 5px 10px;">🌙</button>
     </nav>
@@ -24,7 +24,7 @@
 
   <div class="container">
     <!-- Top Blog Posts Section -->
-    <h1>Top Blog Posts</h1>
+    <h1>Some of Blog Posts</h1>
     <div class="blog-posts">
       <a href="ai-blog.html" class="card" data-category="Technology">
         <img src="https://i.pinimg.com/736x/90/9d/f1/909df1df664fb611e390f9b6aa3c55fd.jpg" style="width: 100%; height: auto;"/>
@@ -32,11 +32,11 @@
       </a>
       <a href="sleep-blog.html" class="card" data-category="Lifestyle">
         <img src="https://i.pinimg.com/736x/61/89/45/618945432aa216172dfaf53c666c53d9.jpg" style="width: 100%; height: auto;"/>
-        <h3>Nighttime Rituals for Restful Sleep</h3>
+        <h3>Night time Rituals for Restful Sleep</h3>
       </a>
       <a href="travel-blog.html" class="card" data-category="Travel">
         <img src="https://i.pinimg.com/736x/46/46/85/4646858076b1e7f4be0b56569dce64a2.jpg" style="width: 100%; height: auto;"/>
-        <h3>Exploring the Alpine Landscapes</h3>
+        <h3>Exploring the Airplane Landscapes</h3>
       </a>
       <a href="meditation-blog.html" class="card" data-category="Health">
         <img src="https://i.pinimg.com/736x/42/f6/6f/42f66f2c74b77da0a58bb5921e45b3a5.jpg" style="width: 100%; height: auto;"/>
